# mrt-downloader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: CI.yml  python.yml
mrt_downloader/: __main__.py  cli.py  download.py  http.py
src/examples/: async_generator_example.py
src/mrt_downloader/: cache.py  cli.py  collector_index.py  collectors.py  download.py  files.py  http.py  mirrors.py  models.py
src/tests/: cache_test.py  collector_index_integration_test.py  collector_index_test.py  collectors_integration_test.py  collectors_test.py  download_integration_test.py  download_test.py  files_test.py  http_integration_test.py  http_test.py  integration_test.py  test_collector_index_integration_test.py
src/tests/data/: stat-ripe-net-data-rrc-info-data.json
src/tests/fixtures/: api-routeviews-guest-collector.json  api-routeviews-meta-collectors.json  ris-rrc08-2020.04.html  route-views-bknix-bgpdata-2020.04-ribs.html  route-views-bknix-bgpdata-2020.04-updates.html
test/: integration_test.py
