[project]
name = "mrt-downloader"
version = "0.0.10"
description = ""
authors = [{name="Ties de Kock", email="ties@tiesdekock.nl"}]
requires-python = ">=3.11"
readme = "README.md"
packages = [{include = "mrt_downloader"}]
dependencies = [
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "click>=8.3.1",
    "typing-extensions>=4.15.0",
]

[project.scripts]
mrt-downloader = "mrt_downloader.cli:cli"

[build-system]
requires = ["uv_build>=0.7.8,<0.12.0"]
build-backend = "uv_build"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
profile = "black"

[tool.ruff]
lint.ignore = ["E501"]

[tool.pytest]
junit_family = "xunit2"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[settings]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
]
# known_third_party = []
